Quality of life improvements for tests